[package]
name = "softmount"
version = "0.1.0"
authors = ["Ilya Epifanov <elijah.epifanov@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Stabilize your video using data from flight controller's blackbox"
repository = "https://github.com/ilya-epifanov/softmount"

[dependencies]
fc-blackbox = "0.1.1"
anyhow = "1"
rayon = "1"
itertools = "0.10"
itertools-num = "0.1"
clap = "3.0.0-beta.2"
opencv = "0.53"
nalgebra = "0.26"
rand = "0.8"
linreg = "0.2"
thiserror = "1"
measure_time = "0.6"
log = "0.4"
pretty_env_logger = "0.4"
statrs = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kv = { version = "0.22", features = ["json-value"] }

[profile.release]
opt-level = 3
debug = true
lto = true
incremental = false
codegen-units = 1
